--- a/docs/css/index.css
+++ b/docs/css/index.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: Comfortaa;
 }
 
 body {
@@ -25,8 +26,7 @@ body {
 
 #tw {
     font-size: 40px;
-    font-style: italic;
-    color: brown;
+    color: black;
 }
 
 #topnav {
@@ -35,28 +35,27 @@ body {
     top: 0;
     left: 0;
     background-color: Black;
-    font-family: Arial, sans-serif;
     font-size: 15px;
 }
 
 .nav-link {
+    text-decoration: none !important;
     display: inline-block;
     width: 100px;
     height: 55px;
     color: White;
-    /* centering text */
     text-align: center;    /* horizontally */
     line-height: 55px;     /* vertically */
-    text-decoration: none;
 }
 
-#topnav > a {
-    text-decoration: none;;
+.nav-link:hover {
+    color: orange;
 }
 
 #logo {
     width: 120px;
-    background-color: RoyalBlue;
+    background-color: orange;
+    color: black;
     font-weight: bold;
 }
 
@@ -71,7 +70,7 @@ body {
     width: auto;
     background-color: orange;
     color: black;
-    padding: 20px;
+    padding: 70px;
     top: 0;
 }
 
@@ -103,9 +102,8 @@ body {
 }
 
 .footer {
-    margin-top: 150px;
     background: #333;
-    padding: 100px 15%;
+    padding: 80px 15%;
     display: flex;
     width: auto;
 }
@@ -116,8 +114,17 @@ body {
 }
 
 .footer ul {
-
     list-style-type: none;
+}
+
+.footer a {
+    text-decoration: none;
+    color: gray;
+    padding: 5px;
+}
+
+.footer a:hover {
+    color: white;
 }
 
 .col-1 {
@@ -133,8 +140,8 @@ body {
 }
 
 .footer div h3 {
-    font-weight: 300;
-    margin-bottom: 30px;
+    font-weight: bold;
+    margin-bottom: 20px;
     letter-spacing: 1px;
 }
 
@@ -152,4 +159,65 @@ body {
 .copyright_text {
     color: #333;
     padding: 10px;
+}
+
+.content {
+    background-color: #666;
+    height: 100% auto;
+    width: 100%;
+    padding: 100px;
+    font-size: 1.1em;
+    line-height: 1.5em;
+}
+
+.content .heading {
+    color: orange;
+    padding-bottom: 10px;
+}
+
+.list li::marker {
+    color: orange;
+}
+
+.content .list {
+    list-style-type: square;
+    padding-left: 40px;
+}
+
+.code-container {
+    display: flex;
+    background-color: darkgray;
+    margin: 20px;
+    color: black;
+    padding: 10px;
+    border-radius: 10px;
+    justify-content: space-between;
+    align-items: center;
+    border: 1px solid orange;
+    box-shadow: 1px 1px 5px 1px black;
+}
+
+.code-container code {
+    font-family: JetBrains Mono;
+    overflow-x: auto; /* Allows horizontal scrolling for long content */
+    flex-grow: 1; /* Allows code content to take available space */
+}
+
+.copy-code-btn {
+    margin-top: 20px;
+    background: none;
+    border: none;
+    cursor: pointer;
+    right: 10px;
+}
+
+.code-container .copy-code-btn:hover {
+    font-weight: bold;
+}
+
+#navi-text {
+    color: orange;
+    font-size: 20px;
+    line-height: 60px;     /* vertically */
+    font-weight: bold;
 }
