--- a/docs/css/index.css
+++ b/docs/css/index.css
@@ -221,3 +221,11 @@ body {
     line-height: 60px;     /* vertically */
     font-weight: bold;
 }
+
+.block {
+    color: orange;
+    font-weight: bold;
+    background-color: #333;
+    padding: 4px;
+    font-family: JetBrains Mono;
+}
