--- a/docs/css/index.css
+++ b/docs/css/index.css
@@ -11,7 +11,7 @@ a {
 }
 
 a:hover {
-    color: orange;
+    color: #04AA6D;
 }
 
 body {
@@ -58,12 +58,13 @@ body {
 }
 
 .nav-link:hover {
-    color: orange;
+    color: #04AA6D;
 }
 
 #logo {
     width: 120px;
-    background-color: orange;
+    background-color: #04AA6D;
+
     color: black;
     font-weight: bold;
 }
@@ -77,7 +78,8 @@ body {
 #mainbox {
     height: auto;
     width: auto;
-    background-color: orange;
+
+    background-color: #04AA6D;
     color: black;
     padding: 70px;
     padding-bottom: 20px;
@@ -88,16 +90,6 @@ body {
     padding: 10px;
     border-radius: 10px;
     background-color: gray;
-}
-
-#get_started_btn a {
-    text-decoration: none;
-    color: red;
-}
-
-#get_started_btn:hover {
-    box-shadow: 0px 2px 2px 0px black;
-    cursor: pointer;
 }
 
 .button4 {
@@ -172,7 +164,7 @@ body {
 }
 
 .content {
-    background-color: #666;
+    background-color: #222;
     height: 100% auto;
     width: 100%;
     padding: 70px;
@@ -181,12 +173,12 @@ body {
 }
 
 .content .heading {
-    color: orange;
+    color: #04AA6D;
     padding-bottom: 10px;
 }
 
 .list li::marker {
-    color: orange;
+    color: #04AA6D;
 }
 
 .content .list {
@@ -225,16 +217,23 @@ body {
 }
 
 #navi-text {
-    color: orange;
+    color: #04AA6D;
     font-size: 20px;
     line-height: 60px;     /* vertically */
     font-weight: bold;
 }
 
 .block {
-    color: orange;
+    color: #04AA6D;
     font-weight: bold;
-    background-color: #333;
-    padding: 4px;
+    display: inline-block;
+    border-radius: 5px;
+    background-color: #111;
+    padding: 7px;
     font-family: JetBrains Mono;
+}
+
+.block:hover {
+    background-color: #04AA6D;
+    color: #111;
 }
