--- a/docs/css/index.css
+++ b/docs/css/index.css
@@ -20,7 +20,8 @@ body {
 }
 
 .button {
-    background-color: #04AA6D; /* Green */
+    background-color: #04AA6D;
+    /* Green */
     border: none;
     color: white;
     padding: 10px;
@@ -45,6 +46,7 @@ body {
     left: 0;
     background-color: Black;
     font-size: 15px;
+    overflow: hidden;
 }
 
 .nav-link {
@@ -53,8 +55,10 @@ body {
     width: 100px;
     height: 55px;
     color: White;
-    text-align: center;    /* horizontally */
-    line-height: 55px;     /* vertically */
+    text-align: center;
+    /* horizontally */
+    line-height: 55px;
+    /* vertically */
 }
 
 .nav-link:hover {
@@ -72,7 +76,7 @@ body {
 #about {
     position: absolute;
     top: 0;
-    right: 0;
+    right: 10;
 }
 
 #mainbox {
@@ -93,14 +97,16 @@ body {
 }
 
 .button4 {
-  color: black;
-  border: 2px solid #e7e7e7;
+    color: black;
+    border: 2px solid #e7e7e7;
 }
 
 .button4:hover {
     background-color: #e7e7e7;
-    color: #04AA6D; /* Green */
-    border-color: #04AA6D; /* Green */
+    color: #04AA6D;
+    /* Green */
+    border-color: #04AA6D;
+    /* Green */
 }
 
 .footer {
@@ -129,17 +135,13 @@ body {
     color: white;
 }
 
-.col-1 {
-
-}
+.col-1 {}
 
 .col-2 {
     flex-grow: 2;
 }
 
-.col-3 {
-
-}
+.col-3 {}
 
 .footer div h3 {
     font-weight: bold;
@@ -209,8 +211,10 @@ body {
 
 .code-container code {
     font-family: JetBrains Mono;
-    overflow-x: auto; /* Allows horizontal scrolling for long content */
-    flex-grow: 1; /* Allows code content to take available space */
+    overflow-x: auto;
+    /* Allows horizontal scrolling for long content */
+    flex-grow: 1;
+    /* Allows code content to take available space */
 }
 
 .copy-code-btn {
@@ -228,7 +232,8 @@ body {
 #navi-text {
     color: #04AA6D;
     font-size: 20px;
-    line-height: 60px;     /* vertically */
+    line-height: 60px;
+    /* vertically */
     font-weight: bold;
 }
 
@@ -272,8 +277,7 @@ body {
     margin-bottom: 10px;
 }
 
-.warning p {
-}
+.warning p {}
 
 .example {
     color: pink;
@@ -316,8 +320,7 @@ body {
     margin-bottom: 10px;
 }
 
-code
-{
+code {
     margin: 40px;
     border-radius: 10px;
     border: 2px solid #04AA6D;
