--- a/docs/css/index.css
+++ b/docs/css/index.css
@@ -1,5 +1,6 @@
 :root {
     --accent: #04AA6D;
+    --accent2: orange;
 }
 
 * {
@@ -19,123 +20,123 @@ a:hover {
 }
 
 body {
-    background-color: black;
-    color: white;
-}
-
-.button {
-    background-color: var(--accent);
-    /* Green */
-    border: none;
-    color: white;
-    padding: 10px;
-    border-radius: 10px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    transition-duration: 0.4s;
-    cursor: pointer;
-}
-
-#tw {
-    font-size: 40px;
-    color: black;
-}
-
-#topnav {
-    width: 100%;
-    position: fixed;
-    top: 0;
-    left: 0;
-    background-color: Black;
-    font-size: 15px;
-    overflow: hidden;
-}
-
-@media screen and (max-width: 750px) {
-    #topnav a:not(:first-child) {
-        display: none;
+        background-color: black;
+        color: white;
     }
 
-    #topnav #about {
-        display: block;
+    .button {
+        background-color: var(--accent);
+        /* Green */
+        border: none;
+        color: white;
+        padding: 10px;
+        border-radius: 10px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 16px;
+        transition-duration: 0.4s;
+        cursor: pointer;
     }
 
-    #topnav.responsive a.nav-link {
-        display: block;
-        width: auto;
+    #tw {
+        font-size: 40px;
+        color: black;
     }
 
-}
-
-@media screen and (min-width: 750px) {
-    #topnav #about {
-        display: none;
+    #topnav {
+        width: 100%;
+        position: fixed;
+        top: 0;
+        left: 0;
+        background-color: Black;
+        font-size: 15px;
+        overflow: hidden;
     }
+
+    @media screen and (max-width: 750px) {
+        #topnav a:not(:first-child) {
+            display: none;
+        }
+
+        #topnav #about {
+            display: block;
+        }
+
+        #topnav.responsive a.nav-link {
+            display: block;
+            width: auto;
+        }
+
 }
 
-.nav-link {
-    text-decoration: none !important;
-    display: inline-block;
-    width: 100px;
-    height: 55px;
-    color: White;
-    text-align: center;
-    /* horizontally */
-    line-height: 55px;
-    /* vertically */
+        @media screen and (min-width: 750px) {
+            #topnav #about {
+                display: none;
+            }
+        }
+
+        .nav-link {
+            text-decoration: none !important;
+            display: inline-block;
+            width: 100px;
+            height: 55px;
+            color: White;
+            text-align: center;
+            /* horizontally */
+            line-height: 55px;
+            /* vertically */
+        }
+
+        .nav-link:hover {
+            color: var(--accent);
 }
 
-.nav-link:hover {
-    color: var(--accent);
-}
-
-#logo {
+                   #logo {
     width: 120px;
     background-color: var(--accent);
 
-    color: black;
-    font-weight: bold;
-}
+        color: black;
+        font-weight: bold;
+    }
 
-#about {
-    position: absolute;
-    top: 0;
-    right: 10;
-}
+    #about {
+        position: absolute;
+        top: 0;
+        right: 10;
+    }
 
-#mainbox {
-    height: auto;
-    width: auto;
+    #mainbox {
+        height: auto;
+        width: auto;
 
-    background-color: var(--accent);
-    color: black;
-    padding: 70px;
-    padding-bottom: 20px;
-    top: 0;
-}
+        background-color: var(--accent);
+        color: black;
+        padding: 70px;
+        padding-bottom: 20px;
+        top: 0;
+    }
 
-#get_started_btn {
-    padding: 10px;
-    border-radius: 10px;
-    background-color: gray;
-}
+    #get_started_btn {
+        padding: 10px;
+        border-radius: 10px;
+        background-color: gray;
+    }
 
-.button4 {
-    color: black;
-    border: 2px solid #e7e7e7;
-}
+    .button4 {
+        color: black;
+        border: 2px solid #e7e7e7;
+    }
 
-.button4:hover {
+    .button4:hover {
     background-color: #e7e7e7;
-    color: var(--accent);
-    /* Green */
+        color: var(--accent);
+            /* Green */
     border-color: var(--accent);
     /* Green */
 }
 
-.footer {
+    .footer {
     background: #333;
     padding: 80px 15%;
     display: flex;
@@ -144,68 +145,69 @@ body {
 
 .footer div {
     text-align: center;
-    text-decoration: none;
-}
+        text-decoration: none;
+            }
 
-.footer ul {
-    list-style-type: none;
-}
+            .footer ul {
+                     list-style-type: none;
+            }
 
 .footer a {
     text-decoration: none;
-    color: gray;
+        color: gray;
     padding: 5px;
-}
+        }
 
 .footer a:hover {
     color: white;
 }
 
-.col-1 {}
+        .col-1 {}
 
 .col-2 {
-    flex-grow: 2;
+        flex-grow: 2;
 }
 
-.col-3 {}
+            .col-3 {}
 
-.footer div h3 {
+            .footer div h3 {
     font-weight: bold;
     margin-bottom: 20px;
-    letter-spacing: 1px;
+                letter-spacing: 1px;
+                color: var(--accent);
 }
 
-.col-1 a {
-    display: block;
+    .col-1 a {
+        display: block;
     text-decoration: none !important;
 }
 
-.col-2 a {
+        .col-2 a {
     color: white;
     display: block;
     text-decoration: none !important;
-}
+        }
 
 .copyright_text {
     color: #333;
     padding: 10px;
 }
 
-.content {
+        .content {
     background-color: #222;
     height: 100% auto;
     width: 100%;
     padding: 70px;
-    font-size: 1.1em;
+        font-size: 1.1em;
     line-height: 1.5em;
 }
 
 .content .heading {
     color: var(--accent);
-    padding-bottom: 10px;
+        padding-bottom: 10px;
 }
 
-.list li::marker,
+            .list li::marker,
 .olist li::marker {
     color: var(--accent);
 }
@@ -227,7 +229,6 @@ body {
     color: var(--accent);
     font-size: 20px;
     line-height: 60px;
-    /* vertically */
     font-weight: bold;
 }
 
@@ -237,19 +238,20 @@ body {
     display: inline-block;
     border-radius: 5px;
     background-color: #111;
-    padding: 7px;
+padding: 7px;
     font-family: JetBrains Mono;
 }
 
-.block:hover {
-    background-color: var(--accent);
-    color: #111;
-}
+        .block:hover {
+            background-color: var(--accent);
+            color: #111;
+        }
 
 .hr {
     margin-top: 10px;
     margin-bottom: 10px;
     color: lightcyan;
+    display: block;
 }
 
 .list2 {
@@ -295,18 +297,18 @@ body {
 }
 
 .note h3 {
-    font-weight: bold;
+font-weight: bold;
     margin-bottom: 10px;
 }
 
 .coming-soon {
-    background-color: #111;
-    padding: 20px;
-    color: orange;
-    margin: 0px 40px 40px 40px;
-    background-color: #111;
-    padding: 20px;
-    border-radius: 10px;
+background-color: #111;
+padding: 20px;
+color: orange;
+margin: 0px 40px 40px 40px;
+background-color: #111;
+padding: 20px;
+border-radius: 10px;
 }
 
 .coming-soon h3 {
@@ -330,4 +332,22 @@ code {
     top: 100;
     left: 100;
     display: none;
+}
+
+.simple-block {
+    padding: 5px;
+    background-color: #333;
+    margin: 10px;
+}
+
+.simple-block .key {
+    color: orange;
+}
+
+.simple-block .key::after {
+    content: ":";
+}
+
+
+.simple-block .value {
 }
