--- a/docs/css/features.css
+++ b/docs/css/features.css
@@ -1,17 +1,31 @@
 #features_box {
     display: flex;
     padding: 70px;
+    margin: 0;
     font-weight: bold;
     font-style: italic;
 }
 
 #features_box h3 {
     text-align: center;
-    margin-top: 30px;
+    margin-top: 10px;
+}
+
+#features_box div {
+    margin: 10px;
+    border: 2px solid #333;
+    border-radius: 10px;
+    text-align: center;
+}
+
+#features_box i {
+    text-align: center;
+    margin-top: 10px;
 }
 
 #features_box #col-1 {
     padding: 20px;
+    margin: 10px;
     width: 40%;
 }
 
